--- a/harmonicMotion/index.html
+++ b/harmonicMotion/index.html
@@ -16,6 +16,6 @@
     </head>
           
     <body>
-       <p>Physics, $v_x = \omega\sqrt{A^2 - x^2}$</p>
+       <p>Physics, v_x = \omega\sqrt{A^2 - x^2}</p>
     </body>
 </html>      
