--- a/harmonicMotion/index.html
+++ b/harmonicMotion/index.html
@@ -6,16 +6,22 @@
       
       <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
       <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  
-        <meta name = "keywords" 
-              content = "physics, harmonic motion" />
-        <meta name = "description" 
-              content = "Physics exercises part 1, simple harmonic motion and non-harmonic motion" />
-        <!-- meta tag ends -->
+      <meta name = "keywords" content = "physics, harmonic motion" />
+      <meta name = "description" content = "Physics exercises part 1, simple harmonic motion and non-harmonic motion" />
+      <!-- meta tag ends -->
   
     </head>
           
     <body>
-       <p>Physics, \( v_x = \omega\sqrt{A^2 - x^2} \)</p>
+        <div>
+       <p>
+           A body executing linear simple harmonic motion has a velocity of 7.0cm/s when its displacement is 2.0cm, and a velocty of 2.0cm/s when its displacement is 7.0cm. What is the square of the amplitude of oscillation? We use the formula:
+           \[x = A cos(\omega t)\]
+           \[v_x = - A \omega sin(\omega t)\]
+       </p>
+       <p> 
+           The relationship between \(x\) and \(v_x\) \(v_x = \omega\sqrt{A^2 - x^2}\)
+        </p>
+        </div>
     </body>
 </html>      
